versioned_docs/version-4.0.x/reference/functions/Start-ADTServiceAndDependencies.mdx
---
id: Start-ADTServiceAndDependencies
title: Start-ADTServiceAndDependencies
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Start a Windows service and its dependencies.

## SYNTAX

```powershell
Start-ADTServiceAndDependencies [-Name] <String> [-SkipDependentServices] [[-PendingStatusWait] <TimeSpan>]
 [-PassThru] [<CommonParameters>]
```

## DESCRIPTION

This function starts a specified Windows service and its dependencies.
It provides options to skip starting dependent services, wait for a service to get out of a pending state, and return the service object.

## EXAMPLES

### EXAMPLE 1

```powershell
Start-ADTServiceAndDependencies -Name 'wuauserv'
```

Starts the Windows Update service and its dependencies.

## PARAMETERS

### -Name

Specify the name of the service.

```yaml
Type: String
Parameter Sets: (All)
Aliases: Service

Required: True
Position: 1
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SkipDependentServices

Choose to skip checking for and starting dependent services.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -PendingStatusWait

The amount of time to wait for a service to get out of a pending state before continuing.
Default is 60 seconds.

```yaml
Type: TimeSpan
Parameter Sets: (All)
Aliases:

Required: False
Position: 2
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru

Return the System.ServiceProcess.ServiceController service object.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### System.ServiceProcess.ServiceController

### Returns the service object.
## NOTES
An active ADT session is NOT required to use this function.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2025 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[Start-ADTServiceAndDependencies](./Start-ADTServiceAndDependencies.mdx)
