versioned_docs/version-4.1.x/reference/functions/Start-ADTServiceAndDependencies.mdx
---
id: Start-ADTServiceAndDependencies
title: Start-ADTServiceAndDependencies
hide_title: false
hide_table_of_contents: false
---

## SYNOPSIS

Start a Windows service and its dependencies.

## SYNTAX

### Name

```powershell
Start-ADTServiceAndDependencies -Name <String> [-SkipDependentServices] [-PendingStatusWait <TimeSpan>]
 [-PassThru] [-WhatIf] [-Confirm] [<CommonParameters>]
```

### InputObject

```powershell
Start-ADTServiceAndDependencies -InputObject <ServiceController> [-SkipDependentServices]
 [-PendingStatusWait <TimeSpan>] [-PassThru] [-WhatIf] [-Confirm] [<CommonParameters>]
```

## DESCRIPTION

This function starts a specified Windows service and its dependencies.
It provides options to skip starting dependent services, wait for a service to get out of a pending state, and return the service object.

## EXAMPLES

### EXAMPLE 1

```powershell
Start-ADTServiceAndDependencies -Name 'wuauserv'
```

Starts the Windows Update service and its dependencies.

### EXAMPLE 2

```powershell
Start-ADTServiceAndDependencies -Name 'wuauserv' -PendingStatusWait 00:01:00
```

Starts the Windows Update service and its dependencies, waiting 1 minute for the serivce to start.

### EXAMPLE 3

```powershell
Start-ADTServiceAndDependencies -Name 'wuauserv' -PendingStatusWait (New-TimeSpan -Minutes 1)
```

Starts the Windows Update service and its dependencies, waiting 1 minute for the serivce to start.

## PARAMETERS

### -Name

Specify the name of the service.

```yaml
Type: String
Parameter Sets: Name
Aliases: Service

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -InputObject

A ServiceController object to start.

```yaml
Type: ServiceController
Parameter Sets: InputObject
Aliases:

Required: True
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -SkipDependentServices

Choose to skip checking for and starting dependent services.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -PendingStatusWait

The amount of time to wait for a service to get out of a pending state before continuing.
Default is 60 seconds.

```yaml
Type: TimeSpan
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -PassThru

Return the System.ServiceProcess.ServiceController service object.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases:

Required: False
Position: Named
Default value: False
Accept pipeline input: False
Accept wildcard characters: False
```

### -WhatIf

Shows what would happen if the cmdlet runs.
The cmdlet is not run.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: wi

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### -Confirm

Prompts you for confirmation before running the cmdlet.

```yaml
Type: SwitchParameter
Parameter Sets: (All)
Aliases: cf

Required: False
Position: Named
Default value: None
Accept pipeline input: False
Accept wildcard characters: False
```

### CommonParameters

This cmdlet supports the common parameters: -Debug, -ErrorAction, -ErrorVariable, -InformationAction, -InformationVariable, -OutVariable, -OutBuffer, -PipelineVariable, -Verbose, -WarningAction, and -WarningVariable. For more information, see [about_CommonParameters](http://go.microsoft.com/fwlink/?LinkID=113216).

## INPUTS

### None

### You cannot pipe objects to this function.
## OUTPUTS

### System.ServiceProcess.ServiceController

### Returns the service object.
## NOTES
An active ADT session is NOT required to use this function.

This function supports the -WhatIf and -Confirm parameters for testing changes before applying them.

Tags: psadt<br />
Website: https://psappdeploytoolkit.com<br />
Copyright: (C) 2026 PSAppDeployToolkit Team (Sean Lillis, Dan Cunningham, Muhammad Mashwani, Mitch Richters, Dan Gough).<br />
License: https://opensource.org/license/lgpl-3-0

## RELATED LINKS

[https://psappdeploytoolkit.com/docs/reference/functions/Start-ADTServiceAndDependencies](https://psappdeploytoolkit.com/docs/reference/functions/Start-ADTServiceAndDependencies)
